Fix Permissions-Policy to allow camera/mic in Daily.co iframes

--- a/deploy/Caddyfile
+++ b/deploy/Caddyfile
@@ -35,7 +35,7 @@ https://pagemdemr.com {
         X-Frame-Options "SAMEORIGIN"
         Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://*.daily.co https://unpkg.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; img-src 'self' blob: data: https:; font-src 'self' data: https://fonts.gstatic.com; connect-src 'self' blob: https://pagemdemr.com https://api.fda.gov https://rxnav.nlm.nih.gov https://clinicaltables.nlm.nih.gov https://*.daily.co wss://*.daily.co https://unpkg.com; frame-src 'self' https://*.daily.co; frame-ancestors 'self'; media-src 'self' blob: https://*.daily.co;"
         Referrer-Policy "strict-origin-when-cross-origin"
-        Permissions-Policy "geolocation=(), microphone=(self), camera=(self)"
+        Permissions-Policy "geolocation=(), microphone=*, camera=*"
         -Server
     }
 
