--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,10 @@
   "private": true,
   "type": "module",
   "dependencies": {
+    "@capacitor/android": "^8.0.1",
+    "@capacitor/cli": "^8.0.1",
+    "@capacitor/core": "^8.0.1",
+    "@capacitor/ios": "^8.0.1",
     "axios": "^1.6.2",
     "date-fns": "^2.30.0",
     "html2pdf.js": "^0.12.1",
@@ -30,6 +34,8 @@
     "dev": "vite",
     "start": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "mobile:sync": "npm run build && npx cap copy",
+    "mobile:update": "npx cap update"
   }
 }
