--- a/client/ios/App/App/App.entitlements
+++ b/client/ios/App/App/App.entitlements
@@ -2,9 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>com.apple.developer.applesignin</key>
+	<!-- Associated Domains for Password AutoFill -->
+	<key>com.apple.developer.associated-domains</key>
 	<array>
-		<string>Default</string>
+		<string>webcredentials:pagemdemr.com</string>
 	</array>
 </dict>
 </plist>
