--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "@capacitor/cli": "^8.0.1",
     "@capacitor/core": "^8.0.1",
     "@capacitor/ios": "^8.0.1",
+    "@capacitor/push-notifications": "^8.0.0",
     "axios": "^1.6.2",
     "date-fns": "^2.30.0",
     "html2pdf.js": "^0.12.1",
