--- a/deploy/Caddyfile
+++ b/deploy/Caddyfile
@@ -33,9 +33,9 @@ https://pagemdemr.com {
         X-Content-Type-Options "nosniff"
         X-XSS-Protection "1; mode=block"
         X-Frame-Options "SAMEORIGIN"
-        Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://*.daily.co https://unpkg.com https://www.google.com https://www.gstatic.com https://meet.jit.si; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://meet.jit.si; img-src 'self' blob: data: https:; font-src 'self' data: https://fonts.gstatic.com; connect-src 'self' blob: https://pagemdemr.com https://api.fda.gov https://rxnav.nlm.nih.gov https://clinicaltables.nlm.nih.gov https://*.daily.co wss://*.daily.co https://unpkg.com https://www.google.com https://meet.jit.si wss://meet.jit.si; frame-src 'self' https://*.daily.co https://www.google.com https://meet.jit.si; frame-ancestors 'self'; media-src 'self' blob: https://*.daily.co https://meet.jit.si;"
+        Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://*.daily.co https://unpkg.com https://www.google.com https://www.gstatic.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; img-src 'self' blob: data: https:; font-src 'self' data: https://fonts.gstatic.com; connect-src 'self' blob: https://pagemdemr.com https://api.fda.gov https://rxnav.nlm.nih.gov https://clinicaltables.nlm.nih.gov https://*.daily.co wss://*.daily.co https://unpkg.com https://www.google.com; frame-src 'self' https://*.daily.co https://www.google.com; frame-ancestors 'self'; media-src 'self' blob: https://*.daily.co;"
         Referrer-Policy "strict-origin-when-cross-origin"
-        Permissions-Policy "geolocation=(), microphone=*, camera=*, display-capture=*"
+        Permissions-Policy "geolocation=(), microphone=*, camera=*"
         -Server
     }
 
