chore: refactor email service to use Resend instead of AWS SES/SMTP

--- a/deploy/env.prod.example
+++ b/deploy/env.prod.example
@@ -104,17 +104,11 @@ FRONTEND_URL=https://pagemdemr.com
 CORS_ORIGIN=https://pagemdemr.com
 
 # ============================================
-# Email Configuration (SMTP) - Using AWS SES
+# Email Configuration - Using Resend
 # ============================================
 EMAIL_ENABLED=true
-EMAIL_FROM=noreply@pagemdemr.com
-SMTP_HOST=email-smtp.us-east-1.amazonaws.com
-SMTP_PORT=587
-SMTP_USER=YOUR_SES_ACCESS_KEY
-SMTP_PASS=YOUR_SES_SMTP_PASSWORD
-SMTP_SECURE=false
-# ^ Set SMTP_SECURE=false for port 587 (STARTTLS)
-#   Set SMTP_SECURE=true for port 465 (SSL/TLS)
+EMAIL_FROM=support@pagemdemr.com
+RESEND_API_KEY=re_123456789
 
 # ============================================
 # Monitoring (optional)
