--- a/deploy/docker-compose.prod.yml
+++ b/deploy/docker-compose.prod.yml
@@ -78,12 +78,8 @@ services:
       SUPER_ADMIN_SECRET: ${SUPER_ADMIN_SECRET}
       # Email System
       EMAIL_ENABLED: ${EMAIL_ENABLED:-false}
-      EMAIL_FROM: ${EMAIL_FROM:-noreply@pagemdemr.com}
-      SMTP_HOST: ${SMTP_HOST}
-      SMTP_PORT: ${SMTP_PORT:-587}
-      SMTP_USER: ${SMTP_USER}
-      SMTP_PASS: ${SMTP_PASS}
-      SMTP_SECURE: ${SMTP_SECURE:-false}
+      EMAIL_FROM: ${EMAIL_FROM:-support@pagemdemr.com}
+      RESEND_API_KEY: ${RESEND_API_KEY}
       # Telehealth (Daily.co)
       DAILY_API_KEY: ${DAILY_API_KEY:-}
     depends_on:
