--- a/server/package.json
+++ b/server/package.json
@@ -33,12 +33,12 @@
     "helmet": "^7.2.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
-    "nodemailer": "^6.9.7",
     "otplib": "^12.0.1",
     "pdfkit": "^0.17.2",
     "pg": "^8.11.3",
     "qrcode": "^1.5.4",
     "redis": "^4.7.1",
+    "resend": "^6.9.1",
     "uuid": "^9.0.1",
     "validator": "^13.15.23"
   },
