--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "@capacitor/core": "^8.0.1",
     "@capacitor/ios": "^8.0.1",
     "axios": "^1.6.2",
+    "clsx": "^2.1.1",
     "date-fns": "^2.30.0",
     "html2pdf.js": "^0.12.1",
     "lucide-react": "^0.294.0",
@@ -21,7 +22,8 @@
     "react-image-crop": "^11.0.10",
     "react-is": "^18.2.0",
     "react-router-dom": "^6.20.0",
-    "recharts": "^3.5.1"
+    "recharts": "^3.5.1",
+    "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.2.1",
