--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.6.2",
     "clsx": "^2.1.1",
     "date-fns": "^2.30.0",
+    "framer-motion": "^12.33.0",
     "html2pdf.js": "^0.12.1",
     "lucide-react": "^0.294.0",
     "qrcode.react": "^4.2.0",
