--- a/server/package.json
+++ b/server/package.json
@@ -39,6 +39,7 @@
     "qrcode": "^1.5.4",
     "redis": "^4.7.1",
     "resend": "^6.9.1",
+    "stripe": "^20.3.1",
     "uuid": "^9.0.1",
     "validator": "^13.15.23"
   },
