--- a/deploy/docker-compose.prod.yml
+++ b/deploy/docker-compose.prod.yml
@@ -86,9 +86,7 @@ services:
       STRIPE_SECRET_KEY: ${STRIPE_SECRET_KEY}
       STRIPE_PUBLISHABLE_KEY: ${STRIPE_PUBLISHABLE_KEY}
       STRIPE_WEBHOOK_SECRET: ${STRIPE_WEBHOOK_SECRET}
-      STRIPE_PRICE_SOLO: ${STRIPE_PRICE_SOLO}
-      STRIPE_PRICE_PARTNER: ${STRIPE_PRICE_PARTNER}
-      STRIPE_PRICE_ENTERPRISE: ${STRIPE_PRICE_ENTERPRISE}
+      STRIPE_PRICE_ID: ${STRIPE_PRICE_ID}
     depends_on:
       db:
         condition: service_healthy
