--- a/deploy/docker-compose.prod.yml
+++ b/deploy/docker-compose.prod.yml
@@ -95,6 +95,7 @@ services:
     volumes:
       - api_logs:/app/logs
       - uploads:/app/uploads
+      - ../server/archives:/app/archives
     healthcheck:
       test: [ "CMD", "node", "-e", "require('http').get('http://localhost:3000/api/health', (r) => {process.exit(r.statusCode === 200 ? 0 : 1)})" ]
       interval: 30s
