--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18.2.0",
     "react-grid-layout": "^1.5.2",
     "react-hotkeys-hook": "^4.4.1",
+    "react-icons": "^5.5.0",
     "react-image-crop": "^11.0.10",
     "react-is": "^18.2.0",
     "react-router-dom": "^6.20.0",
