feat(archives): implement HIPAA-compliant archive hub with grouped UI, safe deployment, and recovery tool
- Fixed Platform Admin dashboard navigation and logout redirects.
- Implemented grouped Clinic Archive Hub with smart filename parsing.
- Corrected archive download 401 errors by fixing API prefix mismatch.
- Hardened deploy-fast.sh to protect server-side archives/uploads from deletion.
- Added standalone decrypt-archive.js utility for HIPAA data recovery.
- Updated .gitignore to secure clinical data directories.

--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,12 @@ yarn-error.log*
 dist/
 build/
 client/build/
+client/dist/
+
+# clinical data (HIPAA)
+server/archives/*
+!server/archives/.gitkeep
+server/uploads/*
+!server/uploads/.gitkeep
+server/logs/*
+!server/logs/.gitkeep
