--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "test:hipaa": "node --experimental-vm-modules node_modules/jest/bin/jest.js tests/hipaa-integration.test.js"
   },
   "dependencies": {
+    "@deepgram/sdk": "^4.11.3",
     "argon2": "^0.31.2",
     "axios": "^1.13.2",
     "bcryptjs": "^2.4.3",
